# budget-app-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Taskfile.yml  alembic.ini  docker-compose.yml  main.py  pyproject.toml  setup.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: release.yml
app/: main.py
app/api/: health.py  router.py
app/core/: auth.py  config.py  database.py  logging.py  register_app.py
app/domain/: base_entity.py  base_repo.py
app/domain/category/: category.py  category_entity.py  category_repository.py  category_value_objects.py  repo.py  vo.py
app/domain/dashboard/: dashboard_entity.py  dashboard_repository.py
app/domain/transaction/: repo.py  transaction.py  transaction_entity.py  transaction_repository.py  transaction_value_objects.py  vo.py
app/infrastructure/category/: category_dto.py  category_repository.py
app/infrastructure/dasoboard/: dashboard_repository.py
app/infrastructure/db/: migrate.py
app/infrastructure/di/: injection.py
app/infrastructure/transaction/: dto.py  repo.py  transaction_dto.py  transaction_repository.py
app/middleware/: __init__.py  logging.py
app/presentation/routes/: __init__.py  category.py  dashboard.py  health.py  transaction.py
app/presentation/schemas/requests/: transaction.py
app/presentation/schemas/responses/: category.py  dasuboard.py  transaction.py
app/usecase/: transaction.py
app/usecase/category/: get_categories.py
app/usecase/dashboard/: get_dashboard_summary_usecase.py
app/usecase/transaction/: __init__.py  create_transaction_usecase.py  delete_transaction_usecase.py  get_transactions_usecase.py  put_tranaction_usecase.py  put_transaction_usecase.py
migrations/: env.py
migrations/versions/: 001_create_transactions_table.py  002_change_user_id_to_string.py  003_create_categories_and_accounts_tables.py  004_disable_foreign_keys_temporarily.py  005_make_account_id_nullable.py  90660cead630_insert_default_expense_categories.py  a605d5a26a5b_auto_migration.py  d9736421a334_insert_default_income_categories.py  fdec277a34de_auto_migration.py
taskfiles/: db.yml  dev.yml
tests/: conftest.py  test_config.py  test_health.py
tests/integration/: test_database.py
tests/unit/: test_api.py
