[project]
name = "budget_app_backend"
version = "0.1.0"
description = "Personal budget management API (FastAPI + SQLAlchemy)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.10.1",
  "alembic>=1.13.0",
  "sqlalchemy>=2.0.0",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP", "N", "PL", "PT"]
ignore = [
    "PLR0913",
    "PLR2004",
    "B008",
    "PLC0415",
]
fixable = ["ALL"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-dummy-args = true

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]

[tool.pytest.ini_options]
addopts = "-ra -q --maxfail=1 --disable-warnings"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources",
]

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "pre-commit>=4.3.0",
  "pytest>=8.4.1",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "ruff>=0.12.4",
  "watchfiles>=1.1.0",
  "httpx>=0.27.0",
]
